--- a/index.html
+++ b/index.html
@@ -17,32 +17,36 @@
 
     <div class="galeria">
         <div class="foto">
-            <div class="foto_info">foto 1</div>
+            <div class="foto_info">Goku SSSJ 10</div>
         </div>
         <div class="foto">
-            <div class="foto_info">foto 2</div>
+            <div class="foto_info">Goku SSSJ 20</div>
         </div>
         <div class="foto">
-            <div class="foto_info">foto 3</div>
+            <div class="foto_info">Goku SSSJ 50</div>
         </div>
         <div class="foto">
-            <div class="foto_info">foto 4</div>
+            <div class="foto_info">Goku SSSJ 10000</div>
         </div>
         <div class="foto">
-            <div class="foto_info">foto 5</div>
+            <div class="foto_info">Goku SSSJ 1000000</div>
         </div>
         <div class="foto">
-            <div class="foto_info">foto 6</div>
+            <div class="foto_info">Goku SSSJ 100000000</div>
         </div>
         <div class="foto">
-            <div class="foto_info">foto 7</div>
+            <div class="foto_info">Goku SSSJ 10000000000</div>
         </div>
         <div class="foto">
-            <div class="foto_info">foto 8</div>
+            <div class="foto_info">Goku SSSJ 100000000000000000000000000000000000</div>
         </div>
 
     </div>
 </main>
-    
+    <footer>
+        <div class="ver_mais">
+            Ver Mais
+        </div>
+    </footer>
 </body>
 </html>
